Fixed overflow bug

--- a/app/component/stop.scss
+++ b/app/component/stop.scss
@@ -465,12 +465,10 @@ hr.action-bar {
 }
 
 .print-button-container {
-  width: 100%;
   display: flex;
   button {
   margin-right: 1em;
   margin-left: auto;
-  // padding: 0.45em 1.5em;
   }
 }
 
